--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -48,7 +48,8 @@ jobs:
             --no-restore \
             --configuration Release \
             /p:GenerateDocumentationFile=true
-          find ./BlindTreaure.UnitTest/bin -name "*.xml" | sort || true
+          # Đúng project: BlindTreasure.UnitTest (không phải BlindTreaure)
+          find ./BlindTreasure.UnitTest/bin -name "*.xml" | sort || true
 
       - name: Run unit tests with coverage
         run: |
@@ -71,9 +72,7 @@ jobs:
           from collections import defaultdict
           import glob, re
 
-          # Chấp nhận cả 2 cách viết (phòng sai chính tả Treasure/Treaure)
           XML_NAMESPACE_PREFIXES = (
-              "M:BlindTreaure.UnitTest.Services.",
               "M:BlindTreasure.UnitTest.Services.",
           )
 
@@ -83,66 +82,60 @@ jobs:
           def strip_params(name: str) -> str:
               return name.split('(')[0] if name else name
 
-          # ---------- XML: lấy Functions (nguồn chuẩn cho sheet Functions) ----------
+          # ---------- XML: lấy Functions ----------
           def extract_functions_from_xml():
-              xml_files = glob.glob('./BlindTreaure.UnitTest/bin/**/*.xml', recursive=True)
+              # Đúng đường dẫn project UnitTest
+              xml_files = glob.glob('./BlindTreasure.UnitTest/bin/**/*.xml', recursive=True)
               funcs = []
               for f in xml_files:
                   try:
-                      tree = ET.parse(f)
-                      root = tree.getroot()
-                      for m in root.findall('.//member'):
-                          name = m.get('name', '')
-                          if not name.startswith('M:'):
-                              continue
-                          if not any(name.startswith(pref) for pref in XML_NAMESPACE_PREFIXES):
-                              continue
-
-                          parts = name.split('.')
-                          if len(parts) < 2:
-                              continue
-                          cls = parts[-2]
-                          met = parts[-1]
-                          method_base = strip_params(met)
-
-                          summary = ""
-                          scenario = ""
-                          coverage = ""
-                          sum_e = m.find('summary')
-                          if sum_e is not None and sum_e.text:
-                              summary = ' '.join(sum_e.text.split())
-
-                          rem_e = m.find('remarks')
-                          if rem_e is not None and rem_e.text:
-                              for line in rem_e.text.splitlines():
-                                  line = line.strip()
-                                  if line.startswith("Scenario:"):
-                                      scenario = line.replace("Scenario:", "").strip()
-                                  elif line.startswith("Coverage:"):
-                                      coverage = line.replace("Coverage:", "").strip()
-
-                          funcs.append({
-                              "Class": cls,
-                              "Method": method_base,
-                              "Description": summary,
-                              "PreCondition": scenario,
-                              "Requirement": coverage,
-                              "Sheet": f"{cls}Management"
-                          })
+                      root = ET.parse(f).getroot()
                   except Exception:
-                      pass
+                      continue
+                  for m in root.findall('.//member'):
+                      name = m.get('name', '')
+                      if not name.startswith('M:'):
+                          continue
+                      if not any(name.startswith(pref) for pref in XML_NAMESPACE_PREFIXES):
+                          continue
+
+                      parts = name.split('.')
+                      if len(parts) < 2:
+                          continue
+                      cls = parts[-2]
+                      met = parts[-1]
+                      method_base = strip_params(met)
+
+                      summary = ""
+                      scenario = ""
+                      coverage = ""
+                      s = m.find('summary')
+                      if s is not None and s.text:
+                          summary = ' '.join(s.text.split())
+                      r = m.find('remarks')
+                      if r is not None and r.text:
+                          for line in r.text.splitlines():
+                              line = line.strip()
+                              if line.startswith("Scenario:"):
+                                  scenario = line.replace("Scenario:", "").strip()
+                              elif line.startswith("Coverage:"):
+                                  coverage = line.replace("Coverage:", "").strip()
+
+                      funcs.append({
+                          "Class": cls,
+                          "Method": method_base,
+                          "Description": summary,
+                          "PreCondition": scenario,
+                          "Requirement": coverage,
+                          "Sheet": f"{cls}Management"
+                      })
               return funcs
 
           # ---------- TRX: lấy kết quả thực tế ----------
           def parse_trx_results(target_classes_short):
-              """
-              Map UnitTestResult(testId) -> UnitTest(TestMethod class/name) để lấy class & method chuẩn.
-              Không lọc theo prefix namespace cứng; chỉ giữ test có class short trùng với Functions.
-              """
               trx_files = glob.glob('./TestResults/**/test-results.trx', recursive=True)
               if not trx_files:
                   return []
-
               with open(trx_files[0], 'r', encoding='utf-8') as f:
                   s = BeautifulSoup(f.read(), 'xml')
 
@@ -161,7 +154,7 @@ jobs:
 
               results = []
               for r in s.find_all('UnitTestResult'):
-                  test_id = r.get('testId') or r.get('testId')
+                  test_id = r.get('testId')
                   if not test_id or test_id not in id_to_method:
                       continue
                   outcome = r.get('outcome', 'Unknown')
@@ -176,7 +169,7 @@ jobs:
                   })
               return results
 
-          # ---------- Match method ----------
+          # ---------- Match ----------
           def normalize_for_match(s: str) -> str:
               return re.sub(r'[^A-Za-z0-9_]', '', s or '').lower()
 
@@ -185,23 +178,16 @@ jobs:
               t = normalize_for_match(trx_method)
               if d == t:
                   return True
-              # Method_Should..., Method_When...
-              if t.startswith(d + 'should') or t.startswith(d + '_should'):
-                  return True
-              if t.startswith(d + 'when') or t.startswith(d + '_when'):
-                  return True
-              if t.startswith(d + '_'):
-                  return True
-              return False
+              # Method_Should..., Method_When..., hoặc prefix
+              return t.startswith(d + 'should') or t.startswith(d + '_should') \
+                  or t.startswith(d + 'when') or t.startswith(d + '_when') \
+                  or t.startswith(d + '_')
 
           def classify_case(name: str) -> str:
               n = (name or "").lower()
-              if "boundary" in n or "_boundary" in n:
-                  return "B"
-              if "abnormal" in n or "_abnormal" in n:
-                  return "A"
-              if "normal" in n or "_normal" in n:
-                  return "N"
+              if "boundary" in n or "_boundary" in n: return "B"
+              if "abnormal" in n or "_abnormal" in n: return "A"
+              if "normal"   in n or "_normal"   in n: return "N"
               return "N"
 
           # ---------- Build report ----------
@@ -232,7 +218,7 @@ jobs:
               for t in trx:
                   class_to_tests[t["Class"]].append(t)
 
-              # STATISTICS per function (aggregate all matched tests of that function)
+              # STATISTICS per function
               stats_rows = []
               for i, f in enumerate(funcs, start=1):
                   cls = f["Class"]
@@ -244,18 +230,15 @@ jobs:
 
                   for t in tests:
                       if is_same_function(method, t["Method"]) or is_same_function(method, t["Display"]):
-                          if t["Outcome"] == "Passed":
-                              passed += 1
-                          elif t["Outcome"] == "Failed":
-                              failed += 1
-                          else:
-                              untested += 1
-                          case = classify_case(t["Display"] or t["Method"])
-                          if case == "N": n_cnt += 1
-                          elif case == "A": a_cnt += 1
-                          elif case == "B": b_cnt += 1
+                          if t["Outcome"] == "Passed": passed += 1
+                          elif t["Outcome"] == "Failed": failed += 1
+                          else: untested += 1
+                          c = classify_case(t["Display"] or t["Method"])
+                          if c == "N": n_cnt += 1
+                          elif c == "A": a_cnt += 1
+                          elif c == "B": b_cnt += 1
 
-                  total = passed + failed + untested  # không ép Untested=1 nếu không match
+                  total = passed + failed + untested
                   stats_rows.append({
                       "No": i,
                       "Function Code": f'=HYPERLINK("#{f["Sheet"]}!A1","Code")',
